# nnsdk-lite

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  format.yml
include/: helpers.h
include/nn/: Handle.h  Result.h  types.h
include/nn/ac/CTR/: ac.h
include/nn/ac/CTR/detail/: ac.h
include/nn/boss/: AppIdList.h  NsData.h  NsDataHeaderInfo.h  NsDataIdList.h  PropertyType.h  ResultCode.h  StepIdList.h  Task.h  TaskAction.h  TaskIdList.h  TaskOption.h  TaskPolicy.h  TaskQuery.h  TaskResultCode.h  TaskServiceStatus.h  TaskStateCode.h  TaskStatus.h  boss.h  common.h  storage.h
include/nn/boss/detail/: IpcManager.h  Privileged.h  User.h  bossM.h  detail.h  property.h  task.h
include/nn/dbg/: BreakReason.h  dbg.h
include/nn/fnd/: TimeSpan.h
include/nn/fs/: MediaType.h
include/nn/ndm/: ndm.h
include/nn/os/: ipc.h  sync.h  thread.h  types.h
include/nn/srv/: errors.h  srv.h
include/nn/srv/detail/: service.h
include/nn/svc/: svc.h
source/nn/ac/CTR/: ac.cpp
source/nn/ac/CTR/detail/: ac.cpp
source/nn/boss/: AppIdList.cpp  NsData.cpp  NsDataIdList.cpp  ResultCode.cpp  StepIdList.cpp  Task.cpp  TaskAction.cpp  TaskIdList.cpp  TaskPolicy.cpp  TaskQuery.cpp  TaskStatus.cpp  boss.cpp  storage.cpp
source/nn/boss/detail/: IpcManager.cpp  Privileged.cpp  User.cpp  detail.cpp  property.cpp  task.cpp
source/nn/dbg/: dbg.cpp
source/nn/ndm/: ndm.cpp
source/nn/os/: ipc.cpp  sync.cpp  thread.cpp
source/nn/srv/: srv.cpp
source/nn/srv/detail/: service.cpp
source/nn/svc/: svc.cpp
(+2 files in other folders)
